# vicmil-chess

./: .gitignore
.github/workflows/: rust.yml
chess_engine/: Cargo.toml
chess_engine/examples/: main.rs
chess_engine/src/: lib.rs  parser.rs
chess_engine/tests/: test.rs
chess_gui_with_networking/: Cargo.toml
chess_gui_with_networking/src/: client.rs  error_handling.rs  main.rs  networking.rs  parser.rs  server.rs
