[package]
name = "chess_gui_with_networking"
version = "0.1.0"
authors = ["vnomarrow <vnomarrow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.6.1"
chess_engine = { path = "../chess_engine" }
glam = { version = "0.17.3", features = ["mint"]}
local-ip-address = "0.4.4"
trait_enum = "0.5.0"